[gd_scene load_steps=24 format=3 uid="uid://c4rjn86fitkjx"]

[ext_resource type="Script" uid="uid://de1thdn2ue2k8" path="res://scripts/world_scripts/last_level/part_4.gd" id="1_tikfc"]
[ext_resource type="Texture2D" uid="uid://dx1wyatsoprpl" path="res://assets/characters/minigame_assets/broly_level/part_4.png" id="2_tdrr3"]
[ext_resource type="PackedScene" uid="uid://ct2rfy2e8m43c" path="res://scenes/player.tscn" id="3_t7ba7"]
[ext_resource type="Texture2D" uid="uid://bn4vo5idvh061" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/second_overlap.png" id="3_tdrr3"]
[ext_resource type="Texture2D" uid="uid://bsgcxv58lylko" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/zeroth_overlap.png" id="5_l4x4x"]
[ext_resource type="PackedScene" uid="uid://dxjokaacmi8sa" path="res://scenes/world_scenes/last_level/moving_board.tscn" id="5_tdrr3"]
[ext_resource type="Texture2D" uid="uid://ct1ibp8tbevrw" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/first_overlap.png" id="6_1rane"]
[ext_resource type="Texture2D" uid="uid://cqtu7ldmhdame" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/third_overlap.png" id="8_l8dor"]
[ext_resource type="Texture2D" uid="uid://dwlja47l6daui" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/fourth_overlap.png" id="9_iaywv"]
[ext_resource type="Texture2D" uid="uid://b6a1uv8iv7vhu" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/fifth_overlap.png" id="10_rua7n"]
[ext_resource type="Texture2D" uid="uid://bjlhfai0m1br2" path="res://assets/characters/minigame_assets/broly_level/part_4_overlaps/sixth_overlap.png" id="11_hdcy3"]
[ext_resource type="PackedScene" uid="uid://cbl8qp3q56px5" path="res://scenes/world_scenes/last_level/crystal.tscn" id="12_1rane"]
[ext_resource type="PackedScene" uid="uid://bkvifke0t0v3q" path="res://scenes/enemy.tscn" id="13_l8dor"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_l8dor"]
vertices = PackedVector2Array(37.9922, 718, 37.6563, 480, 87, 480, 87, 661, 441.977, 718.992, 153, 661, 440.992, 480, 153, 480, 326, 434, 37.6016, 434, 37.5313, 383, 326, 383, 440.797, 434, 394, 434, 394, 288, 440.188, 288, 326, 337, 37.4688, 337, 37.3984, 288, 326, 288, 439.008, 5.99219, 439.641, 156, 84, 157.008, 37, 5, 37.3281, 242, 84, 242, 440, 242, 156, 242, 156, 203, 439.844, 203)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 3, 5), PackedInt32Array(6, 4, 5, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(12, 13, 14, 15), PackedInt32Array(16, 17, 18, 19), PackedInt32Array(20, 21, 22, 23), PackedInt32Array(24, 23, 22, 25), PackedInt32Array(26, 27, 28, 29)])
outlines = Array[PackedVector2Array]([PackedVector2Array(33, 1, 443, 2, 446, 723, 34, 722), PackedVector2Array(39, 438, 39, 476, 91, 476, 91, 657, 149, 657, 149, 476, 439, 476, 439, 438), PackedVector2Array(40, 246, 40, 284, 330, 284, 330, 341, 40, 341, 40, 379, 330, 379, 330, 438, 390, 438, 390, 284, 439, 284, 439, 246, 152, 246, 152, 199, 440, 199, 440, 160, 88, 161, 88, 246)])
source_geometry_mode = 2
source_geometry_group_name = &"navigation"
agent_radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5o4x6"]
size = Vector2(58, 198)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tikfc"]
size = Vector2(400, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdrr3"]
size = Vector2(350, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7ba7"]
size = Vector2(399, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ohi5"]
size = Vector2(64, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mf3pc"]
size = Vector2(351, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yhbxx"]
size = Vector2(60, 231)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8dor"]
size = Vector2(27, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iaywv"]
size = Vector2(77, 37)

[node name="part_4" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_tikfc")

[node name="Part4" type="Sprite2D" parent="."]
position = Vector2(240, 360)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_tdrr3")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
z_index = 2
navigation_polygon = SubResource("NavigationPolygon_l8dor")

[node name="Enemy" parent="." instance=ExtResource("13_l8dor")]
position = Vector2(216, 600)
detection_collision_radius = 80.0

[node name="Enemy4" parent="." instance=ExtResource("13_l8dor")]
position = Vector2(411, 550)
detection_collision_radius = 80.0

[node name="Enemy2" parent="." instance=ExtResource("13_l8dor")]
position = Vector2(302, 314)
detection_collision_radius = 70.0

[node name="Enemy3" parent="." instance=ExtResource("13_l8dor")]
position = Vector2(123, 315)
detection_collision_radius = 70.0

[node name="Player" parent="." instance=ExtResource("3_t7ba7")]
position = Vector2(64, 505)
current_ball = "dragon_ball_7"

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, 1)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 480
limit_bottom = 720
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="." groups=["navigation"]]
modulate = Color(0.231377, 0.82, 0.2214, 1)
position = Vector2(116, 598)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["navigation"]]
position = Vector2(4, -37)
shape = SubResource("RectangleShape2D_5o4x6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(123, -141)
shape = SubResource("RectangleShape2D_tikfc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(99, -238)
shape = SubResource("RectangleShape2D_tdrr3")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D"]
position = Vector2(123.5, -333)
shape = SubResource("RectangleShape2D_t7ba7")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, -375.5)
shape = SubResource("RectangleShape2D_6ohi5")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Area2D"]
position = Vector2(147.5, -418)
shape = SubResource("RectangleShape2D_mf3pc")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(244, -237.5)
shape = SubResource("RectangleShape2D_yhbxx")

[node name="moving_boards" type="Node2D" parent="."]

[node name="MovingBoard" parent="moving_boards" instance=ExtResource("5_tdrr3")]
position = Vector2(60, 456)
start_pos = Vector2(60, 456)
end_pos = Vector2(180, 456)
move_speed = 0.5

[node name="MovingBoard2" parent="moving_boards" instance=ExtResource("5_tdrr3")]
position = Vector2(60, 264)
start_pos = Vector2(300, 264)
end_pos = Vector2(420, 264)
move_speed = 0.5

[node name="z_index_increase_after_death" type="Node2D" parent="."]

[node name="0" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(120, 689)
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_l4x4x")

[node name="1" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(60, 507)
scale = Vector2(1.5, 1.5)
texture = ExtResource("6_1rane")

[node name="2" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(300, 481)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_tdrr3")
offset = Vector2(0, 17.3333)

[node name="3" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(180, 408)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_l8dor")

[node name="4" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(420, 315)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_iaywv")

[node name="5" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(180, 312)
scale = Vector2(1.5, 1.5)
texture = ExtResource("10_rua7n")

[node name="6" type="Sprite2D" parent="z_index_increase_after_death"]
position = Vector2(300, 223)
scale = Vector2(1.5, 1.5)
texture = ExtResource("11_hdcy3")

[node name="crystals" type="Node2D" parent="."]
position = Vector2(1, 0)

[node name="crystal1" parent="crystals" instance=ExtResource("12_1rane")]
position = Vector2(300, 570)

[node name="crystal2" parent="crystals" instance=ExtResource("12_1rane")]
position = Vector2(60, 317)

[node name="next_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="next_scene"]
position = Vector2(473.5, 111)
shape = SubResource("RectangleShape2D_l8dor")

[node name="previous_scene" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="previous_scene"]
position = Vector2(60.5, 691.5)
shape = SubResource("RectangleShape2D_iaywv")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(36, 139, 36, 132, 72, 132, 72, 99, 476, 99, 476, 120, 444, 120, 444, 660, 84, 660, 84, 696, 36, 696, 36, 141, 21, 144, -35, 323, -33, 741, 559, 763, 667, 492, 529, 29, 127, 3, 9, 59, 19, 125)

[node name="SpawnPoints" type="Node" parent="."]

[node name="spawnpoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(60, 659)

[node name="spawnpoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(436, 113)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="next_scene" to="." method="_on_next_scene_body_entered"]
[connection signal="body_entered" from="previous_scene" to="." method="_on_previous_scene_body_entered"]
